# skypy

./: .gitignore  .mailmap  .readthedocs.yml  .rtd-environment.yml  .travis.yml  .zenodo.json  CITATION  CITATION.rst  CODE_OF_CONDUCT.md  COMMUNICATING.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.rst  MANIFEST.in  README.rst  ah_bootstrap.py  importing_skypy.rst  install.rst  main.bib  paper.bib  paper.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  new-model-proposal.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/problem_matchers/: flake8.json  pytest.json  sphinx.json
.github/workflows/: codestyle.yaml  compatibility.yaml  docs.yaml  draft-pdf.yml  examples.yaml  flake8.yaml  pr.yaml  test.yaml  tests.yaml
docs/: Makefile  conf.py  configuration_files.rst  feature_list.rst  galaxies.rst  galaxy.rst  how_to_config_file.rst  importing_skypy.rst  index.rst  install.rst  luminosity.yml  main_functionalities.rst  neutral_hydrogen.rst  photometry.rst  positions.rst  requirements.txt  running_skypy.rst
docs/_static/: skypy.css
docs/arch/: adr-01.md  adr-02.md  adr-03.md
docs/cluster/: index.rst
docs/contributing/: CONTRIBUTING.rst
docs/developer/: CONTRIBUTING.rst
docs/galaxy/: index.rst
docs/gravitational_wave/: index.rst
docs/gravitational_waves/: index.rst
docs/halo/: index.rst
docs/halos/: index.rst
docs/linear/: index.rst
docs/nonlinear/: index.rst
docs/pipeline/: index.rst
docs/position/: index.rst
docs/power_spectrum/: index.rst
docs/project/: CODE_OF_CONDUCT.rst  citation.rst
docs/random/: index.rst
docs/skypy/: index.rst
docs/stats/: index.rst
docs/supernova/: index.rst
docs/utils/: index.rst
examples/: README.rst  abundance_matching.ipynb  abundance_matching.yml  gravitational_wave_rates.ipynb  gravitational_wave_rates.yml  herbel_galaxies.yaml  mccl_galaxies.ipynb  mccl_galaxies.yml
examples/galaxies/: README.rst  SDSS_DR7.csv  SDSS_ellipticity.npz  SDSS_ellipticity.txt  Shen+03_early.txt  Shen+03_late.txt  lopez_sanjuan+17_B1.ecsv  plot_demographics.py  plot_ellipticity.py  plot_photometry.py  plot_schechter.py  plot_size.py  sdss_dered_10deg2.ecsv  sdss_photometry.yml  weigel16_active.csv  weigel16_central.csv  weigel16_quiescent.csv  weigel16_satellite.csv  weigel16_total.csv
examples/tests/: test_gravitational_wave_rates.py
licenses/: LICENSE.rst  TEMPLATE_LICENCE.rst  kcorrect.rst
scripts/: skypy
skypy/: __init__.py  _astropy_init.py  conftest.py  core.py  example_mod.py  halo_sampler.py
skypy/Test_subpkg/: __init__.py  funcs.py
skypy/cluster/: __init__.py
skypy/clusters/: sampler.py
skypy/example_subpkg/: setup_package.py
skypy/examples/: gravitational_wave_rates.yml
skypy/galaxies/: __init__.py  _schechter.py  luminosity.py  magnitude_error.py  morphology.py  redshift.py  spectrum.py  stellar_mass.py  vdf_sampler.py  velocity_dispersion.py
skypy/galaxy/: __init__.py  _schechter.py  _spectrum_loaders.py  ellipticity.py  galaxy_size.py  luminosities_herbel.py  luminosity.py  mass.py  models.py  morphology.py  redshift.py  redshifts_herbel.py  sed.py  size.py  spectra.py  spectrum.py  stellar_mass.py
skypy/gravitational_wave/: __init__.py  binary_merger_rate.py  merger_rate.py
skypy/gravitational_waves/: __init__.py  merger_rate.py
skypy/halo/: __init__.py  abundance_matching.py  halo_sampler.py  mass.py  properties.py  quenching.py
skypy/halos/: Literature_data (SHAM paper).txt  Literature_model_values (SHAM paper).txt  __init__.py  _colossus.py  abundance_matching.py  bc_file.yaml  bs_file.yaml  halo.yaml  mass.py  quenching.py  rc_file.yaml  red_central.yaml  redshift.py  rs_file.yaml  sampler.py  sham.py  test_gal.yaml
skypy/linear/: __init__.py  camb.py  eisenstein_hu.py  growth.py  (+1 more)
(+194 files in other folders)
