[metadata]
name = skypy
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.1
author = SkyPy Team
author_email = adam.amara@port.ac.uk
description = A package for modelling the Universe.
long_description = This package contains methods for modelling the Universe, galaxies and the Milky Way. Also included are methods for generating observed data.
long_description_content_type = text/x-rst
license = BSD 3-Clause
url = http://skypy.info
edit_on_github = True
github_project = skypyproject
python_requires = ">=3.5"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = astropy; networkx; numpy; scipy; pyyaml
zip_safe = False
use_2to3 = False
scripts = scripts/skypy

[options.entry_points]
console_scripts =

    astropy-package-template-example = packagename.example_mod:main


[options.package_data]
* = *.c
skypy = data/*
skypy.power_spectrum.tests = data/*
skypy.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py,skypy/version.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
