[metadata]
name = skypy
author = SkyPy Team
author_email = adam.amara@port.ac.uk
description = A package for modelling the Universe.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause
license_file = LICENSE.rst
url = http://skypy.info
edit_on_github = True
github_project = skypyproject/skypy

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    networkx
    numpy
    scipy
    pyyaml

[options.entry_points]
console_scripts =
    skypy = skypy.pipeline.scripts.skypy:main

[options.extras_require]
test =
    pytest-astropy
    pytest-rerunfailures
    skypy-data @ https://github.com/skypyproject/skypy-data/archive/master.tar.gz
    specutils
all =
    camb
    classy @ git+https://github.com/skypyproject/classy.git@v2.8.1#egg=classy
    skypy-data @ https://github.com/skypyproject/skypy-data/archive/master.tar.gz
    specutils
docs =
    sphinx-astropy
    matplotlib

[options.package_data]
skypy = data/*,*/tests/data/*

[tool:pytest]
testpaths = "skypy" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    skypy/_astropy_init*
    skypy/conftest.py
    skypy/*setup_package*
    skypy/tests/*
    skypy/*/tests/*
    skypy/extern/*
    skypy/version*
    */skypy/_astropy_init*
    */skypy/conftest.py
    */skypy/*setup_package*
    */skypy/tests/*
    */skypy/*/tests/*
    */skypy/extern/*
    */skypy/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    except ModuleNotFoundError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[pep8]
max-line-length = 100
